# atomsGaffer

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yaml
config/: installDependencies.py
config/azure/: build.yaml  setBuildVars.py
examples/assets/atomsRobot/: atomsRobot.json
examples/assets/atomsRobot/cache/: test_sim.0001.frame.atoms  test_sim.0001.header.atoms  test_sim.0001.meta.atoms  test_sim.0001.pose.atoms  test_sim.0002.frame.atoms  test_sim.0002.header.atoms  test_sim.0002.meta.atoms  test_sim.0002.pose.atoms  test_sim.0003.frame.atoms  test_sim.0003.header.atoms  test_sim.0003.meta.atoms  test_sim.0003.pose.atoms  test_sim.0004.frame.atoms  test_sim.0004.header.atoms  test_sim.0004.meta.atoms  test_sim.0004.pose.atoms  test_sim.0005.frame.atoms  test_sim.0005.header.atoms  test_sim.0005.meta.atoms  test_sim.0005.pose.atoms  test_sim.0006.frame.atoms  test_sim.0006.header.atoms  test_sim.0006.meta.atoms  test_sim.0006.pose.atoms  test_sim.0007.frame.atoms  test_sim.0007.header.atoms  test_sim.0007.meta.atoms  test_sim.0007.pose.atoms  test_sim.0008.frame.atoms  test_sim.0008.header.atoms  test_sim.0008.meta.atoms  test_sim.0008.pose.atoms  test_sim.0009.frame.atoms  test_sim.0009.header.atoms  test_sim.0009.meta.atoms  test_sim.0009.pose.atoms  test_sim.0010.frame.atoms  test_sim.0010.header.atoms  test_sim.0010.meta.atoms  test_sim.0010.pose.atoms  (+161 more)
examples/assets/atomsRobot/cache/agentTypes/: atoms2Robot.py  atomsRobot.py
examples/assets/atomsRobot/cloth/atoms2Robot/: clothsetup.atomscloth
examples/assets/atomsRobot/cloth/atomsRobot/: clothsetup.atomscloth
examples/assets/atomsRobot/cloth_cache/: cloth_sim.0001.clothcache  cloth_sim.0002.clothcache  cloth_sim.0003.clothcache  cloth_sim.0004.clothcache  cloth_sim.0005.clothcache  cloth_sim.0006.clothcache  cloth_sim.0007.clothcache  cloth_sim.0008.clothcache  cloth_sim.0009.clothcache  cloth_sim.0010.clothcache  cloth_sim.0011.clothcache  cloth_sim.0012.clothcache  cloth_sim.0013.clothcache  cloth_sim.0014.clothcache  cloth_sim.0015.clothcache  cloth_sim.0016.clothcache  cloth_sim.0017.clothcache  cloth_sim.0018.clothcache  cloth_sim.0019.clothcache  cloth_sim.0020.clothcache  cloth_sim.0021.clothcache  cloth_sim.0022.clothcache  cloth_sim.0023.clothcache  cloth_sim.0024.clothcache  cloth_sim.0025.clothcache  cloth_sim.0026.clothcache  cloth_sim.0027.clothcache  cloth_sim.0028.clothcache  cloth_sim.0029.clothcache  cloth_sim.0030.clothcache  cloth_sim.0031.clothcache  cloth_sim.0032.clothcache  cloth_sim.0033.clothcache  cloth_sim.0034.clothcache  cloth_sim.0035.clothcache  cloth_sim.0036.clothcache  cloth_sim.0037.clothcache  cloth_sim.0038.clothcache  cloth_sim.0039.clothcache  cloth_sim.0040.clothcache  (+11 more)
examples/assets/atomsRobot/geometries/atoms2Robot/: RobotBody.geos
examples/assets/atomsRobot/geometries/atomsRobot/: flag.geos  pPlane1.geos  pole.geos  robot1_arms.geos  robot1_body.geos  robot1_head.geos  robot1_legs.geos  robot2_arms.geos  robot2_body.geos  robot2_head.geos  robot2_legs.geos
examples/assets/atomsRobot/materials/atoms2Robot/: purple_material_ARN_MAT.ass  red_material_ARN_MAT.ass  yellow_material_ARN_MAT.ass
examples/assets/atomsRobot/materials/atomsRobot/: flag_material_ARN_MAT.ass  lambert1.ass  pole_material.ass  pole_material_ARN_MAT.ass  robot1_material.ass  robot1_material_ARN_MAT.ass  robot2_material.ass  robot2_material_ARN_MAT.ass
examples/scripts/: atomsExampleScene.gfr  atomsWorkflow.gfr
include/AtomsGaffer/: AtomsAgentReader.h  AtomsAttributes.h  AtomsCrowdClothReader.h  AtomsCrowdGenerator.h  AtomsCrowdReader.h  AtomsMathTranaslator.h  AtomsMetadata.h  AtomsMetadataTranslator.h  AtomsObject.h  AtomsVariationReader.h  TypeIds.h
python/AtomsGaffer/: __init__.py
python/AtomsGafferTest/: AtomsAgentReaderTest.py  AtomsAttributesTest.py  AtomsCrowdClothReaderTest.py  AtomsCrowdGeneratorTest.py  AtomsCrowdReaderTest.py  AtomsMetadataTest.py  AtomsTestData.py  AtomsVariationReaderTest.py  __init__.py
python/AtomsGafferUI/: AtomsAgentReaderUI.py  AtomsAttributesUI.py  AtomsCrowdClothReaderUI.py  AtomsCrowdGeneratorUI.py  AtomsCrowdReaderUI.py  AtomsMetadataUI.py  AtomsVariationReaderUI.py  DocumentationAlgo.py  __init__.py
python/AtomsGafferUITest/: DocumentationTest.py  __init__.py
src/AtomsGaffer/: AtomsAgentReader.cpp  AtomsAttributes.cpp  AtomsCrowdClothReader.cpp  AtomsCrowdGenerator.cpp  AtomsCrowdReader.cpp  AtomsMetadata.cpp  AtomsMetadataTranslator.cpp  AtomsObject.cpp  AtomsVariationReader.cpp
src/AtomsGafferModule/: AtomsGafferModule.cpp
startup/gui/: menu.py
